--- a/city이음새.html
+++ b/city이음새.html
@@ -34,7 +34,7 @@ html{font-family: 'Noto Sans KR', sans-serif;}
 
 <div id= "ftext"> 섬에서의 힘든 사투를 마치고 부대원들이 <br>집결되어 있는
 					가까운 시가지로 향한다. </div>
-<div id= "ttext"><a  href= file:///C:/Users/user/Desktop/%EC%9B%94%EB%94%94%ED%8D%BC%EC%BD%94%EB%94%A9/%EB%8F%99%ED%99%941203/%EA%B2%8C%EC%9E%84%EC%8B%9C%ED%80%80%EC%8A%A4/%EC%8B%9C%EA%B0%80%EC%A7%80/city1216.html
+<div id= "ttext"><a  href= https://himpowerchikara.github.io/1220-city/city1216.html 
         > Chapter 2 </div>
 
 <script type="text/javascript">
